bbbb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbbb
  labels:
    app: bbbb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbbb
  template:
    metadata:
      labels:
        app: bbbb
    spec:
      containers:
      - name: bbbb
        image: kind-game:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
        readinessProbe:
          httpGet: {path: /api/state, port: 443}
        livenessProbe:
          httpGet: {path: /api/state, port: 443}
