bbbb/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbbb
  labels:
    app: bbbb
spec:
  selector:
    app: bbbb
  ports:
  - port: 443
    targetPort: 443
  type: ClusterIP
