bbbb/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bbbb
  namespace: bbbb
spec:
  hosts:
    - bbbb
  http:
    - route:
        - destination:
            host: bbbb
            port:
              number: 443
